# PunCalculus

./: .gitignore  Cargo.toml  README.md
examples/: sudoku.punc
opcodes/: x86.yaml
src/: ast.rs  lib.rs  main.rs  prs.rs  reference_solver.rs  term.rs  typ.rs
tests/: a_macro.rs  b_types.rs  c_as.rs  c_lsts.rs  individual_rules.rs
