[package]
name = "punc"
version = "1.0.13"
authors = ["Andrew <andrew@subarctic.org>"]
license = "MIT"
description = "Pun Calculus"
edition = "2018"
readme = "README.md"
repository = "https://github.com/andrew-johnson-4/PunCalculus"
keywords = ["pun","calculus"]

[dependencies]
im-lists   = { version = "0.4" }
serde = "1.0"
serde_yaml = "0.9"
